--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,16 @@
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
+
+      <form method="post" action="">
+        <input type="email" name="email" class="input" placeholder="Email">
+        <input type="text" name="name" class="input" placeholder="Name">
+        <input type="text" name="address" class="input" placeholder="Address">
+        <input type="phone" name="phone" class="input" placeholder="Phone">
+        <input type="color" name="color" class="input" >
+        <input type="date" name="delivery_date" class="input">
+        <input type="submit" value="Submit">
+      </form>
     </div>
   </body>
 </html>
