--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <input type="email" name="email" class="input" placeholder="Email">
         <input type="text" name="name" class="input" placeholder="Name">
         <input type="text" name="address" class="input" placeholder="Address">
-        <input type="phone" name="phone" class="input" placeholder="Phone">
+        <input type="tel" name="phone" class="input" placeholder="Phone">
         <input type="color" name="color" class="input" >
         <input type="date" name="delivery_date" class="input">
         <input type="submit" value="Submit">
